# calai-calculator

./: README.md  calai_calculator.py  pyproject.toml
calai_calculator/: __init__.py  cli.py  core.py
