[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calai-calculator"
version = "1.1.0"
description = "CalAI Calculator OS — modular CRUDC archive CLI with V, VF, STRV, VP, VC systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["calculator", "cli", "archive", "calai", "smartwatch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.scripts]
calai = "calai_calculator.cli:run"

[project.urls]
Homepage = "https://github.com/OnyxNeol/calai-calculator"
Repository = "https://github.com/OnyxNeol/calai-calculator"
